--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fortune Teller Online</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="fortune.css">
+</head>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+    <audio src="https://youtu.be/zBh5Kxq63Sw?si=B1EejkZ3PrtlsYsJ" autoplay></audio>
+    <h1 id="fortune" align = 'center'>Free online tarot card fortune telling<br>
+    </h1>
+        <h2 id="fortune" align="center">Services that we offer:</h2>
+        <div id="spread"class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <a href="Fortune3.html" >
+                        <button type="button">Three-Card Spread</button>
+                    </a>
+                </div>
+              <div class="col">
+                <button type="button">Relationship Spread</button>
+                
+              </div>
+              <div class="col">
+                <button type="button">Yes/No Spread</button>
+              </div>
+            </div>
+ 
+        </div>
+    </div>
 </body>
 </html>
