--- a/Fortune3.html
+++ b/Fortune3.html
@@ -11,9 +11,10 @@
 
 <body>
     <div class="container">
-    <h1 id="fortune">Get the answers you need with this 3-card Tarot spread.</h1><br></div>
-    <h2 id="fortune" align="center">Choose your cards to reveal your future</h2><br>
+    <h1 id="fortune">Get the answers you need with this 3-card Tarot spread.</h1><br>
+    <h2 id="fortune" align="center">Choose your cards to reveal your future</h2><br></div>
     
+    <a class="backtoblack" href="Fortune.html">Back to the begining</a><br>
     <tarot-deck align="center">
         <tarot-deck-card></tarot-deck-card>
         <tarot-deck-card></tarot-deck-card>
@@ -97,8 +98,18 @@
         <tarot-deck-card></tarot-deck-card>
     </tarot-deck>
     
-<a class="backtoblack" href="Fortune.html">Back to the begining</a><br>
 
+<spread-answer>
+    <spread-card>
+        <h3>Self</h3>
+    </spread-card>
+    <spread-card>
+        <h3>Situation</h3>
+    </spread-card> 
+    <spread-card>
+        <h3>Chalenge</h3>
+    </spread-card>
+</spread-answer>
 
 
 
