--- a/Fortune_marriage.html
+++ b/Fortune_marriage.html
@@ -3,9 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Love Me Spread</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="fortune.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1 id="fortune">Get the answers you need with this Love Tarot spread.</h1><br>
+        <h2 id="fortune" align="center">Choose your cards to reveal your love life</h2><br></div>
+        
+        <a class="backtoblack" href="Fortune.html">Back to the begining</a><br>
+        <tarot-deck align="center">
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+            <tarot-deck-card></tarot-deck-card>
+        </tarot-deck>
+
+        <spread-answer>
+            <spread-card>
+                <h3>Love and Me</h3>
+            </spread-card>
+            <spread-card>
+                <h3>Situation</h3>
+            </spread-card> 
+            <spread-card>
+                <h3>Chalenge</h3>
+            </spread-card>
+        </spread-answer>
 </body>
 </html>
