--- a/Fortune.html
+++ b/Fortune.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fortune Teller Online</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="\fortune.css">
+    <link rel="stylesheet" href="fortune.css">
 </head>
 <body>
     <audio src="https://youtu.be/zBh5Kxq63Sw?si=B1EejkZ3PrtlsYsJ" autoplay></audio>
@@ -21,11 +21,14 @@
                     </a>
                 </div>
               <div class="col">
+                <a href="Fortune_marriage.html">
                 <button type="button">Relationship Spread</button>
-                
+                </a>
               </div>
               <div class="col">
+                <a href="Yes_or_No.html">
                 <button type="button">Yes/No Spread</button>
+                </a>
               </div>
             </div>
  
